# chromas3

./: .gitignore  CMakeLists.txt  README.md
include/: ab1file.h  align.h  endian.h  exception.h  geneticcodes.h  log.h  lookuptables.h  scffile.h  seqcontainer.h  sequence.h  strutil.h  system.h
lib/: CMakeLists.txt  ab1file.cpp  align.cpp  exception.cpp  geneticcodes.cpp  log.cpp  lookuptables.cpp  scffile.cpp  sequence.cpp
test/: CMakeLists.txt  sequence.cpp  test_sequence.cpp  translation.cpp
windows/: system.cpp
